--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>VECTOR client</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div class="p-4">
-      <h2 class="display-5 mb-4">axis <span class="fs-3">rest client</span></h2>
+      <h2 class="display-5 mb-4">Vector <span class="fs-3">client</span></h2>
       <form data-form>
         <div class="input-group mb-4">
           <select class="form-select flex-grow-0 w-auto" data-method>
