--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         </ul>
         <div
           class="tab-content border-top-0 border"
-          style="min-height: 50px; max-height: 200px"
+          style="min-height: 50px; max-height: 300px"
           id="myTabContent"
         >
           <div
@@ -167,7 +167,10 @@
             role="tabpanel"
             aria-labelledby="response-body-tab"
           >
-            <div data-response-body class="overflow-scroll"></div>
+            <div
+              data-response-body
+              class="overflow-scroll max-height=300px"
+            ></div>
           </div>
           <div
             class="tab-pane fade"
